--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 16px;
     margin: 0;
     color: white;
-    /*background: #242830;*/
+    background: #242830;
 }
 
 @media screen and (max-width: 576px) {
@@ -89,7 +89,6 @@ a, a:hover, a:active, a:visited, a:focus {
 
 .section-container {
     background: url("../img/Designed_by_Kjpargeter_at_Freepik.jpg") center fixed no-repeat;
-    background-color: #242830;
     height: 100%;
     background-size: cover;
 }
